# FastAPI-Template

./: .env  CONTRIBUTION.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 19ee4b8770bd_user_model_added.py
app/: main.py
app/api/: deps.py
app/api/users/v1/: urls.py
app/api/users/v1/user/: user.py
app/core/: config.py  security.py
app/models/: __init__.py
app/models/users/: user.py
app/utilities/: crud.py
